--- a/torneo/templates/index.html
+++ b/torneo/templates/index.html
@@ -11,23 +11,7 @@
 <body>
   <h1>THIS IS A TOURNAMENT</h1>
 
-  
-  <form action="{% url 'create_team' %}" method="POST">
-    {% csrf_token %}
-    <label for="nombre">Nombre equipo:</label>
-    <input type="text" name="nombre" placeholder="Ingrese nombre">
-    
-    <label for="abreviatura">Abreviatura equipo:</label>
-    <input type="text"  name="abreviatura" placeholder="Ingrese abreviatura">
-
-    <label for="aniofundacion">Año de fundacion:</label>
-    <input type="number" name="aniofundacion" placeholder="Ingrese anio de fundacion">
-  
-    <button type="submit" class="btn btn-primary">Agregar equipo</button>
-  </form>
-  <h1>Equipos</h1>
-  <h1>Jugadores</h1>
+  <a class="btn btn-primary" href="form/team" role="button">Ingresar equipo</a>
+  <a class="btn btn-primary" href="list/teams" role="button">Ver equipos ingresados</a>
 </body>
-  
-
 </html>
