--- a/torneo/templates/team_form.html
+++ b/torneo/templates/team_form.html
@@ -14,7 +14,7 @@
     
     <input type="text"  name="abreviatura" placeholder="Ingrese abreviatura">
 
-    <input type="number" name="aniofundacion" placeholder="Ingrese anio de fundacion">
+    <input type="number" name="aniofundacion" placeholder="Ingrese año">
   
     <button type="submit" class="btn btn-primary">Agregar equipo</button>
   </form>
