--- a/torneo/templates/team_form.html
+++ b/torneo/templates/team_form.html
@@ -8,15 +8,29 @@
   <link rel="stylesheet" href="{% static 'main.css' %}">
 </head>
 <body>
-  <form action="{% url 'create_team' %}" method="POST">
+  <form class="form-inline" action="{% url 'create_team' %}" method="POST">
     {% csrf_token %}
-    <input type="text" name="nombre" placeholder="Ingrese nombre">
-    
-    <input type="text"  name="abreviatura" placeholder="Ingrese abreviatura">
-
-    <input type="number" name="aniofundacion" placeholder="Ingrese año">
-  
-    <button type="submit" class="btn btn-primary">Agregar equipo</button>
+    <div class="form-group mb-2">
+      <label class="sr-only">Nombre de equipo: </label>
+    </div>
+    <div class="col-2">
+      <input type="text"  class="form-control" name="nombre" placeholder="Ingrese nombre">
+    </div>
+    <div class="form-group mb-2">
+      <label class="sr-only">Abreviatura de equipo: </label>
+    </div>
+    <div class="col-2">
+      <input type="text" class="form-control" name="abreviatura" placeholder="Ingrese abreviatura">
+    </div>
+    <div class="form-group mb-2">
+      <label class="sr-only">Año de fundacion: </label>
+    </div>
+    <div class="col-2">
+      <input type="number" class="form-control" name="aniofundacion" placeholder="Ingrese año">
+    </div>
+    <div class="col-2" style="padding-top: 20px">
+      <button type="submit" class="btn btn-primary ">Agregar equipo</button>
+    </div>
   </form>
 </body>
 </html> 
