--- a/torneo/templates/list_teams.html
+++ b/torneo/templates/list_teams.html
@@ -11,24 +11,75 @@
   <h1>Equipos</h1>
   <div class="card-group">
     {% for equipo in Equipos %}
-      <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-        <div class="card-header">{{equipo.abreviatura}}</div>
+      <div class="card text-white bg-dark mb-3" style="max-width: 50rem;">
+        <div class="card-header">{{equipo.abreviatura}}
+        </div>
         <div class="card-body">
           <h5 class="card-title">{{equipo.nombre}}</h5>
           <p class="card-text">Este equipo se fundó en: {{equipo.aniofundacion}}</p>
-          <form action="{% url 'player_form' equipo.id%}" method="POST">
+          <h5 class="card-text">Para ingresar un jugador al equipo rellene el siguiente formulario: </h5>
+          <form class="form-inline" action="{% url 'create_player' equipo.id %}" method="POST">
             {% csrf_token %}
-            <button class="btn btn-success">Agregar jugador</button>
+            <div class="form-group mb-2">
+              <label class="sr-only">Numero de pasaporte: </label>
+            </div>
+            <div class="col">
+              <input type="number"  class="form-control" name="num_pasaporte" placeholder="Ingrese número de pasaporte">
+            </div>
+            <div class="form-group mb-2">
+              <label class="sr-only">Nombre de jugador: </label>
+            </div>
+            <div class="col-">
+              <input type="text" class="form-control" name="nombre" placeholder="Ingrese nombre">
+            </div>
+            <div class="form-group mb-2">
+              <label class="sr-only">Nacionalidad: </label>
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" name="nacionalidad" placeholder="Ingrese nacionalidad">
+            </div>
+            <div class="form-group mb-2">
+              <label class="sr-only">Edad: </label>
+            </div>
+            <div class="col">
+              <input type="number" class="form-control" name="edad" placeholder="Ingrese edad">
+            </div>
+            <div class="form-group mb-2">
+              <label class="sr-only">posicion: </label>
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" name="posicion" placeholder="Ingrese posicion">
+            </div>
+            <div class="form-group mb-2">
+              <label class="sr-only">posicion abreviada: </label>
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" name="abr_posicion" placeholder="Ingrese posicion abreviada">
+            </div>
+            <div class="form-group mb-2">
+              <label class="sr-only">Número dorsal: </label>
+            </div>
+            <div class="col">
+              <input type="number" class="form-control" name="num_dorsal" placeholder="Ingrese número">
+            </div>
+            <div class="col" style="padding-top: 20px">
+              <button type="submit" class="btn btn-primary aling-left"  style="float: right;">Agregar jugador</button>
+            </div>
           </form>
+
+        </div>
+        <div>
           <form action="{% url 'delete_team' equipo.id %}" method="POST">
             {% csrf_token %}
-            <button class="btn btn-danger">Eliminar equipo</button>
+            <button class="btn btn-danger" style="max-width: 6rem;" >Eliminar equipo</button>
           </form>
         </div>
       </div>
+      
       {% empty %}
       <h1 class="text-light">No hay equipos aún</h1>
     {% endfor %}
   </div>
+
 </body>
 </html> 
