agregar atributos de staff

--- a/torneo/templates/list_teams.html
+++ b/torneo/templates/list_teams.html
@@ -57,7 +57,19 @@
               <input type="text" class="form-control" name="abr_posicion" placeholder="Ingrese posicion abreviada">
             </div>
             <div class="form-group mb-2">
-              <label class="sr-only">Número dorsal: </label>
+              <label class="sr-only">Cargo: </label>
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" name="cargo" placeholder="Ingrese cargo">
+            </div>
+            <div class="form-group mb-2">
+              <label class="sr-only">Cargo abreviado: </label>
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" name="abr_cargo" placeholder="Ingrese cargo abreviada">
+            </div>
+            <div class="form-group mb-2">
+              <label class="sr-only">Número dorsal: (Ingrese 0 si no aplica)</label>
             </div>
             <div class="col">
               <input type="number" class="form-control" name="num_dorsal" placeholder="Ingrese número">
